--- a/gestione-orari/Readme
+++ b/gestione-orari/Readme
@@ -1,1 +1,1 @@
-sonar-scanner.bat -Dsonar.projectKey=iudasfhiu43 -Dsonar.organization=ovrclockz-github -Dsonar.sources=. -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=2903a058da2bbc140508730121e78b5cad5767d4
+sonar-scanner -Dsonar.projectKey=iudasfhiu43 -Dsonar.organization=ovrclockz-github -Dsonar.sources=. -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=2903a058da2bbc140508730121e78b5cad5767d4
